[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqsys"
version = "0.0.2"
authors = [
  { name="Maximilian Schöberl", email="maxschoeberl@gmail.com" },
]
description = "An attempt to create a Python library to communicate with QSYS Cores via their QRC (JSONRPC 2.0) protocol."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mexxs/pyqsys"
"Bug Tracker" = "https://github.com/mexxs/pyqsys/issues"
